configuring default ports

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -9,5 +9,15 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=TestClearMechanic;Trusted_Connection=True;TrustServerCertificate=True",
     "CustomConnection": "Server=VAME\\SQLEXPRESS;Database=TestClearMechanic;User Id=VAME\\Erick;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:5142"
+      },
+      "Https": {
+        "Url": "https://localhost:7216"
+      }
+    }
   }
 }
